--- a/pips/templates/pips/base.html
+++ b/pips/templates/pips/base.html
@@ -1,25 +1,52 @@
-{% load bootstrap3 %}
+{% load staticfiles %}
 <html>
 	<head>
-		{% bootstrap_css %}
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<meta name="description" content="PioPio">
+		<meta name="author" content="Fernando L. Canizo">
+		<link rel="icon" href="{% static 'img/favicon.ico' %}">
+
+		<title>PioPio - A Twitter-like pet project</title>
+
+		<link rel="stylesheet" media="screen" href="{% static 'lumen/bootstrap.min.css' %}">
+		<link rel="stylesheet" media="screen" href="{% static 'css/style.css' %}">
 	</head>
 	<body>
-		{% block bootstrap3_content %}
+		<!-- Fixed navbar -->
+		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
-				<h1>{% block title %}{{ title }}{% endblock %}</h1>
-
-				<p>
-					<a href="{% url 'index' %}">home</a>
-				</p>
-
-				{# Display django.contrib.messages as Bootstrap alerts #}
-				{% autoescape off %}{% bootstrap_messages %}{% endautoescape %}
-
-				{% block content %}(no content){% endblock %}
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">PioPio</a>
+				</div>
+				<div id="navbar" class="collapse navbar-collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="/profile">Profile</a></li>
+					</ul>
+				</div>
 			</div>
+		</nav>
 
-		{% endblock %}
+		<div class="container">
+			{% block content %}
+			{% endblock %}
+		</div>
 
-		{% bootstrap_javascript %}
+		<footer class="footer">
+			<div class="container">
+				<p class="text-muted">Footer content here.</p>
+			</div>
+		</footer>
+
+		<script src="{% static 'jquery.min.js' %}"></script>
+		<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	</body>
 </html>
